# turul-rpc

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md
crates/turul-rpc/: Cargo.toml  README.md
crates/turul-rpc-core/: Cargo.toml  README.md
crates/turul-rpc-core/src/: error.rs  lib.rs  notification.rs  request.rs  response.rs  types.rs
crates/turul-rpc-jsonrpc/: Cargo.toml  README.md
crates/turul-rpc-jsonrpc/src/: batch.rs  dispatch.rs  lib.rs
crates/turul-rpc-jsonrpc/tests/: spec_conformance.rs
crates/turul-rpc-server/: Cargo.toml  README.md
crates/turul-rpc-server/src/: dispatcher.rs  handler.rs  lib.rs  session.rs  streaming.rs
crates/turul-rpc/examples/: batch_dispatch.rs  in_process_round_trip.rs  simple_calculator.rs
crates/turul-rpc/src/: lib.rs  prelude.rs
docs/adr/: 001-crate-boundaries.md  002-json-rpc-2-compliance.md  003-compatibility-with-turul-mcp-json-rpc-server.md  004-non-goals-for-v0-1.md
