[workspace]
resolver = "2"
members = [
    "crates/turul-rpc-core",
    "crates/turul-rpc-jsonrpc",
    "crates/turul-rpc-server",
    "crates/turul-rpc",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Nick Hortovanyi <nick@aussierobots.com.au>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/aussierobots/turul-rpc"
homepage = "https://github.com/aussierobots/turul-rpc"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "test-util"] }

# Internal workspace crates
turul-rpc-core = { version = "0.1", path = "crates/turul-rpc-core" }
turul-rpc-jsonrpc = { version = "0.1", path = "crates/turul-rpc-jsonrpc" }
turul-rpc-server = { version = "0.1", path = "crates/turul-rpc-server", default-features = false }

[profile.release]
lto = "thin"
codegen-units = 1
